Dao full rework